added hosted url of logo

--- a/views/billTemplate.ejs
+++ b/views/billTemplate.ejs
@@ -44,7 +44,8 @@
 </head>
 <body>
     <div class="header">
-        <img src="<%= logoUrl %>" alt="VPharmacy Logo">
+        <!-- <img src="https://ibb.co/Vw0nxbb" alt="VPharmacy Logo"> -->
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/kmVbJzz/vpharmacylogo.png" alt="vpharmacylogo"></a>
         <h1>VPharmacy</h1>
     </div>
     <div class="details">
