added remark in bill template

--- a/views/billTemplate.ejs
+++ b/views/billTemplate.ejs
@@ -112,5 +112,8 @@
     <div class="signature">
         <p>Signature: Bishnu Pandey</p>
     </div>
+    <div class="signature">
+        <p>Remark: <%=bill.remark%></p>
+    </div>
 </body>
 </html>
